the drop down was 1px too high, i fixed that bs

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -101,7 +101,7 @@ body {
             height: 170px;
             position: absolute;
             z-index: 2;
-            top: 132px;
+            top: 133px;
             text-align: left;
 
             &.last-child {
